# HalfEdgeMesh

./: .gitignore  CMakeLists.txt
include/: HalfEdgeMesh.h  HalfEdgeMesh.impl.h
tests/: CMakeLists.txt  HalfEdgeMesh.cpp
